--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="hero">
     <h1>Welcome <br>To Our Local Guide</h1>
-    <p>Discover the best<br> restaurants, bars and taverns in Kalamata!</p>
+    <p>Discover the best<br> restaurants, bars , kafe and taverns in Kalamata!</p>
   </header>
 
   <!-- TAVERNS SECTION -->
@@ -42,7 +42,7 @@
       <div class="card">
         <img src="images/leonidas_2.jpg" alt="Leonidas" style="width:100%; border-radius:8px;" />
         <h3 translate="no">Leonidas Butcher Tavern</h3>
-        <p>Famous for its grilled meats — lamb chops, sausages, and more — this tavern is a top choice for traditional Greek meat dishes.</p>
+        <p>Famous for its grilled meats lamb chops, sausages, and more this tavern is a top choice for traditional Greek meat dishes.</p>
         <p><a href="https://maps.app.goo.gl/jxGRsS5xsTRHU5qy7" target="_blank">Google Maps</a></p>
       </div>
 
@@ -86,14 +86,7 @@
 
 
       <div class="card">
-        <img src="images/kastraki.jpg" alt="Kastraki" style="width:100%; border-radius:8px;" />
-        <h3 translate="no">Kastraki</h3>
-        <p>With over 30 years in hospitality, Kastraki offers excellent service and beautiful beachfront views.</p>
-        <p><a href="https://www.tripadvisor.com.gr/Restaurant_Review-g668020-d6696826-Reviews-Kastraki_Meteoro-Kalamata_Messenia_Region_Peloponnese.html" target="_blank">TripAdvisor</a> | <a href="https://maps.app.goo.gl/BNYxPiGfyLJs47fq7" target="_blank">Google Maps</a></p>
-      </div>
-
-      <div class="card">
-        <img src="images/Almyra.jpeg" alt="Almyra" style="width:100%; border-radius:8px;" />
+        <img src="images/Almyra_fonto.jpg" alt="Almyra" style="width:100%; border-radius:8px;" />
         <h3 translate="no">Almyra</h3>
         <p>A stylish beach bar offering views of the Messinian Bay, ideal for relaxation or cocktails.</p>
         <p><a href="https://www.tripadvisor.com.gr/Restaurant_Review-g668020-d10617456-Reviews-Almyra-Kalamata_Messenia_Region_Peloponnese.html" target="_blank">TripAdvisor</a> | <a href="https://maps.app.goo.gl/EZ1ozhEdMnsNwGca9" target="_blank">Google Maps</a></p>
@@ -107,6 +100,13 @@
         <p><a href="https://maps.app.goo.gl/sQVGJLPtgLCPHu3h9" target="_blank">Google Maps</a></p>
       </div>
 
+      <div class="card">
+        <img src="images/kastraki.jpg" alt="Kastraki" style="width:100%; border-radius:8px;" />
+        <h3 translate="no">Kastraki</h3>
+        <p>With over 30 years in hospitality, Kastraki offers excellent service and beautiful beachfront views.</p>
+        <p><a href="https://www.tripadvisor.com.gr/Restaurant_Review-g668020-d6696826-Reviews-Kastraki_Meteoro-Kalamata_Messenia_Region_Peloponnese.html" target="_blank">TripAdvisor</a> | <a href="https://maps.app.goo.gl/BNYxPiGfyLJs47fq7" target="_blank">Google Maps</a></p>
+      </div>
+
     </div>
   </section>
 
@@ -116,17 +116,17 @@
     <div class="card-grid">
 
       <div class="card">
-        <img src="images/coffee1.jpg" alt="Mosaiko" style="width:100%; border-radius:8px;" />
-        <h3 translate="no">Secada</h3>
-        <p>Mosaiko offers specialty coffee, modern brunch options, and a cozy interior perfect for relaxing or remote work.</p>
-        <p><a href="#" target="_blank">Google Maps</a></p>
+        <img src="images/secada_square.webp" alt="Secada Square" style="width:100%; border-radius:8px;" />
+        <h3 translate="no">Secada Square</h3>
+        <p>Your go-to spot at the Square for breakfast, brunch, and coffee from morning till night.</p>
+        <p><a href="https://maps.app.goo.gl/YFSKJ9VUfTMDLFML6" target="_blank">Google Maps</a></p>
       </div>
 
       <div class="card">
-        <img src="images/coffee2.jpg" alt="Flamingo" style="width:100%; border-radius:8px;" />
-        <h3 translate="no">Flamingo Coffee Bar</h3>
-        <p>A beautiful seaside café serving excellent coffee, pastries, and snacks with a relaxed vibe.</p>
-        <p><a href="#" target="_blank">Google Maps</a></p>
+        <img src="images/Blossom.jpg" alt="Blossom Owl" style="width:100%; border-radius:8px;" />
+        <h3 translate="no">Blossom Owl</h3>
+        <p>Blossom Owl is a stylish café offering specialty coffee, modern brunch, handcrafted desserts, and curated retail—all in a high-aesthetic setting. Browse the menu and find something that sparks your interest!</p>
+        <p><a href="https://maps.app.goo.gl/DW3iHD1JZdqPyMc77" target="_blank">Google Maps</a></p>
       </div>
 
     </div>
