--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="card-grid">
 
       <div class="card" data-id="secada-square">
-        <img src="images/secada_square.webp" alt="Secada Square" />
+        <img src="images/Secada_new.jpg" alt="Secada Square" />
         <h3 translate="no">Secada Square</h3>
         <p>Your go-to spot at the Square for breakfast, brunch, and coffee from morning till night.</p>
         <p><a href="#" target="_blank">Google Maps</a></p>
